# Kazik-Bot

./: .flake8  main.py  pyproject.toml
Bot/: __init__.py  additional_functoins.py  config.py  print_functions.py  run.py
Bot/Handlers/: bonus_spin.py  common.py  spin.py
Bot/Keyboards/: __init__.py  all_keyboards.py  gamemode.py
Database/: __init__.py  db_creation.py
Logic/: __init__.py
Logic/Settings/: SymbolsEnum.py  __init__.py  settings.json  validations.py
Logic/Spin/: Bonus.py  SlotCheck.py  SlotSpin.py  WinCount.py  __init__.py  bonus.py  slot_check.py  slot_spin.py  win_count.py
Logic/Symbols/: SymbolsEnum.py  __init__.py
