[tool.poetry]
name = "start"
version = "0.1.0"
description = "Kazik-Bot for Telegram"
authors = ["ArtemMiler <artemm469@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
pydantic = "^2.10.4"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
